Closed Bug 382289 Opened 17 years ago Closed 17 years ago

with new textframe: td containing multiple span(s) set to white-space:nowrap expands unnecessarily.

Categories

(Core :: Layout, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: phiw2, Unassigned)

References

()

Details

(Keywords: testcase)

Attachments

(1 file)

a table-cell contains various spans set to {white-space:nowrap}
The <td> takes the total width of the spans as if they did not wrap (staying on one line).
In the URL given, scroll down a little: the line with the financial info (stock market, exchange rate)  is the offender.

build used:
Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.9a5pre) Gecko/20070528 Minefield/3.0a5pre ID:2007052804 [cairo]

Note that standard Minefield builds also display this incorrectly - the span(s) never drop to the next line, although they should - I once tracked this down as a regression from a bug checked in in November, can't find my notes about it right now
That was caused by the particular formatting of the source code (removing line-breaks in the source code would cause the page to display correctly).
OK, I just checked a fix for this into trunk.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Flags: in-testsuite?
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: